@@ -3,6 +3,7 @@
     * Add command line importer functionality (#253)
     * Add Recarpet Markdown support (#318)
     * Make markdown/textile extensions configurable (#312)
+    * Add `markdownify` filter
   * Minor Enhancements
     * Switch to Albino gem
     * Bundler support
